--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -13,33 +13,39 @@ font-2 = "RobotoMono Nerd Font:style=Medium:size=13"
 
 enable-ipc = true
 foreground = ${colors.pink}
-background =  ${colors.black}
+background = ${colors.black}
 module-margin = 1
 height = 25
 
 
 [bar/desktopbar]
 #monitor = HDMI-0
-modules-right =   playing-song pulseaudio uptime up date  powermenu
+modules-right =   openleft playing-song pulseaudio uptime up date  powermenu
 modules-center = time
 modules-left = workspaces-xmonad
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
-font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
+font-1 = "RobotoMono Nerd Font:style=Medium:pixelsize=20;5"
 font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
 foreground = ${colors.white}
-background = ${colors.black}
+background = #FF000000
+;${colors.black}
 #radius = 7
+#padding-right = 5
+tray-background = ${colors.black}
+tray-offset-x = -10
+padding-right = 1
 tray-position = right
 tray-detatched = false
-#border-top-size = 10
+border-top-size = 5
 #border-bottom-size = 5
 #border-left-size = 10
 #border-right-size = 10
+#offset-x = 5
 line-size = 3
 height = 30
-module-margin = 1
+#module-margin = 1
 
 [bar/laptopbar]
 modules-right =   playing-song pulseaudio battery date
@@ -47,22 +53,28 @@ modules-center = time
 modules-left = workspaces-xmonad
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
-font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
-font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
+font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15;10"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=30;-10"
 enable-ipc = true
 foreground = ${colors.pink}
-background =  ${colors.black}
+background = ${colors.black}
 ;radius = 7
 tray-position = right
 tray-detatched = false
-;border-top-size = 10
+;border-top-size = 2
 ;border-bottom-size = 5
 ;border-left-size = 10
 ;border-right-size = 10
+
 line-size = 3
 height = 25
 module-margin = 1
 
+[module/openleft]
+type = custom/script
+exec = printf "\n"
+format-font = 2
+format-foreground = ${colors.black}
 [module/pomodoro]
 type = custom/script
 exec = pomodoro status
@@ -71,6 +83,8 @@ exec = pomodoro status
 type = custom/script
 exec = ~/getup.sh
 format-foreground = #ff7a67
+format-padding = 1
+format-background = ${colors.black}
 interval = 30
 
 [module/packages]
@@ -169,8 +183,10 @@ bar-load-empty = -
 
 [module/uptime]
 type = custom/script
-exec = uptime -p | sed 's/up//'
+exec = uptime | awk -F" " '{ print $3}' | sed 's/,//'
 format = " <label>"
+format-padding = 1
+format-background = ${colors.black}
 
 
 [module/memory]
@@ -224,26 +240,29 @@ purple = #9591FF
 type = internal/date
 date =  %a %d %b
 format-foreground = ${colors.pink}
-
+format-background = ${colors.black}
+format-padding = 1
 
 [module/time]
 type = internal/date
-date = %I:%M%P
-format-foreground = ${colors.white}
+date = %{T2}%{F#8BB2C1}%{B#FF000000}%{T1}%{B#8BB2C1}%{F#EEEEEE} %I:%M%P %{T2}%{F#8BB2C1}%{B#FF000000}
+format-foreground = ${colors.black}
 
 [module/workspaces-xmonad]
 type = custom/script
 exec = tail -F /tmp/.xmonad-workspace-log
 ; exec-if = [ -p /tmp/.xmonad-workspace-log ]
 tail = true
-format-offset = 10
+#format-offset = 10
 
 [module/playing-song]
 type = custom/script
 exec = media-bar
 click-middle = ~/.config/polybar/scripts/eww.sh player_bar
 tail = true
+format-padding = 1
 format-foreground = #707078
+format-background = ${colors.black}
 
 [module/battery]
 type = internal/battery
@@ -316,14 +335,17 @@ animation-discharging-framerate = 500
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-foreground = #8BB2C1
+format-volume-background = ${colors.black}
 sink = @DEFAULT_SINK@
 use-ui-max = true
 label-active-font = 1
 interval = 5
 
 format-volume = <ramp-volume> <label-volume>
+format-volume-padding = 1
 label-muted = ﱝ muted
 label-muted-foreground = #9ecbdb
+label-muted-background = ${colors.black}
 ramp-volume-0 = 奄
 ramp-volume-1 = 墳
 ramp-volume-2 = 墳
@@ -334,7 +356,6 @@ click-right = nix-shell -p pavucontrol --command "pavucontrol" &
 type = custom/text
 content = "襤 "
 
-#content-background = ${colors.black}
+content-background = ${colors.black}
 content-foreground = ${colors.pink}
-
 click-left = ~/.config/rofi/applets/applets/powermenu.sh &
