[polybar] make round

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -245,7 +245,7 @@ format-padding = 1
 
 [module/time]
 type = internal/date
-date = %{T2}%{F#8BB2C1}%{B#FF000000}%{T1}%{B#8BB2C1}%{F#EEEEEE} %I:%M%P %{T2}%{F#8BB2C1}%{B#FF000000}
+date = %{T2}%{F#FF3f3f3f}%{B#FF000000}%{T1}%{B#FF3f3f3f}%{F#FFFFFF} %I:%M%P %{T2}%{F#FF3f3f3f}%{B#FF000000}
 format-foreground = ${colors.black}
 
 [module/workspaces-xmonad]
