--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "nixos-config"]
 	path = nixos-config
-	url = git@github.com:Auscyberman/nixos-config
+	url = git://github.com/auscyberman/nixos-config.git
