--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -25,7 +25,7 @@ modules-left = workspaces-xmonad
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=15;3"
 font-1 = "RobotoMono Nerd Font:style=Medium:pixelsize=34;5"
-font-2 = "RobotoMono Nerd Font:style=Medium:size=40;-10"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=1;-10"
 enable-ipc = true
 foreground = ${colors.white}
 background = #FF000000
@@ -52,7 +52,7 @@ modules-center = time
 modules-left = workspaces-xmonad
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
-font-2 = "RobotoMono Nerd Font:style=Medium:size=24;-10"
+font-2 = "RobotoMono Nerd Font:style=Normal:size=24;-10"
 enable-ipc = true
 foreground = ${colors.pink}
 background = ${colors.black}
